# har-cnn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/har/: har.hpp  math.hpp  tensor.hpp
include/har/layers/: activation.hpp  layer.hpp
include/har/loss/: loss.hpp
include/har/network/: sequential.hpp
src/: source.cpp
